Closed Bug 1184282 Opened 9 years ago Closed 9 years ago

1,200 instances of "Break suggested inside cluster!" emitted from gfx/thebes/gfxTextRun.cpp during linux64 debug testing

Categories

(Core :: Layout: Text and Fonts, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla42
Tracking Status
firefox42 --- fixed

People

(Reporter: erahm, Assigned: erahm)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

+++ This bug was initially created as a clone of Bug #385719 +++

> 1247 [NNNNN] WARNING: Break suggested inside cluster!: file gfx/thebes/gfxTextRun.cpp, line 220

This warning [1], introduced in bug 385719 in 2007, shows up in the following test suites:

> mozilla-central_ubuntu64_vm-debug_test-mochitest-gl-bm113-tests1-linux64-build14.txt:684
> mozilla-central_ubuntu64_vm-debug_test-crashtest-bm53-tests1-linux64-build28.txt:322
> mozilla-central_ubuntu64_vm-debug_test-reftest-e10s-2-bm123-tests1-linux64-build2.txt:114
> mozilla-central_ubuntu64_vm-debug_test-reftest-4-bm121-tests1-linux64-build1.txt:97
> mozilla-central_ubuntu64_vm-debug_test-reftest-e10s-1-bm68-tests1-linux64-build0.txt:16
> mozilla-central_ubuntu64_vm-debug_test-reftest-2-bm53-tests1-linux64-build27.txt:14

It shows up in 26 tests. A few of the most prevalent:

> 362 - dom/canvas/test/webgl-conformance/_wrappers/test_conformance__more__conformance__quickCheckAPI-B1.html
> 322 - dom/canvas/test/webgl-conformance/_wrappers/test_conformance__more__conformance__quickCheckAPI-G_I.html
> 311 - file:///builds/slave/test/build/tests/reftest/tests/layout/generic/crashtests/947158.html
> 55 - file:///builds/slave/test/build/tests/reftest/tests/layout/reftests/text/wordbreak-7b.html
> 32 - file:///builds/slave/test/build/tests/reftest/tests/layout/reftests/text/wordbreak-6.html
> 28 - file:///builds/slave/test/build/tests/reftest/tests/layout/reftests/text/wordbreak-5.html
> 25 - file:///builds/slave/test/build/tests/reftest/tests/layout/reftests/text/wordbreak-7a.html
> 18 - file:///builds/slave/test/build/tests/reftest/tests/layout/reftests/text/wordbreak-9.html
> 18 - file:///builds/slave/test/build/tests/reftest/tests/layout/reftests/font-face/cjkcisvs-1.html
> 12 - file:///builds/slave/test/build/tests/reftest/tests/layout/reftests/text/justification-space-diacritic.html

[1] https://hg.mozilla.org/mozilla-central/annotate/49683d4e9ebd/gfx/thebes/gfxTextRun.cpp#l220
The associated comment:

> // This can happen ... there is no guarantee that our linebreaking rules
> // align with the platform's idea of what constitutes a cluster.

seems to indicate that this is unfortunate, yet expected behavior. Perhaps we should just remove the warning.
Assignee: nobody → erahm
Status: NEW → ASSIGNED
Hmmm, given that we're now using harfbuzz in most cases (OSX being the notable exception), I'm sort of surprised that this is happening so much. I think removing the warning is fine but we should probably investigate why this happens so much as it may indicate other bugs.
(In reply to John Daggett (:jtd) from comment #3)
> Hmmm, given that we're now using harfbuzz in most cases (OSX being the
> notable exception), I'm sort of surprised that this is happening so much. I
> think removing the warning is fine but we should probably investigate why
> this happens so much as it may indicate other bugs.

I'm happy to investigate this further, do you have any specific requests? A sampling of stacks is certainly doable.
Flags: needinfo?(jdaggett)
url:        https://hg.mozilla.org/integration/mozilla-inbound/rev/c281b91bf5f854499806f45c38ca03b6baf126e8
changeset:  c281b91bf5f854499806f45c38ca03b6baf126e8
user:       Eric Rahm <erahm@mozilla.com>
date:       Thu Jul 16 16:43:04 2015 -0700
description:
Bug 1184282 - Remove break suggested inside cluster warning. r=roc
https://hg.mozilla.org/mozilla-central/rev/c281b91bf5f8
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla42
Flags: needinfo?(jdaggett)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: