Bug 1184282 - Remove break suggested inside cluster warning. r=roc